# PyIntLab

./: .bellybutton.yml  .gitignore  .pyre_configuration  .python-version  .sourcery.yaml  AGENTS.md  Makefile  Pipfile  README.md  asv.conf.json  index.json  info.json  myasvupdate.sh  poetry.out  pyproject.toml  regressions.json  regressions.xml  setup.cfg  setup.py
.asv/results/: benchmarks.json
.asv/results/BWN12101/: 0010cf26-virtualenv-py3.12-Cython.json  0010cf26-virtualenv-py3.12.json  0010cf26-virtualenv-py3.13-Cython.json  0010cf26-virtualenv-py3.13.json  0010cf26-virtualenv-py3.14-Cython.json  0010cf26-virtualenv-py3.14.json  005cbba2-virtualenv-py3.12-Cython.json  005cbba2-virtualenv-py3.12.json  005cbba2-virtualenv-py3.13-Cython.json  005cbba2-virtualenv-py3.13.json  005cbba2-virtualenv-py3.14-Cython.json  005cbba2-virtualenv-py3.14.json  0066685f-virtualenv-py3.12-Cython.json  0066685f-virtualenv-py3.12.json  0066685f-virtualenv-py3.13-Cython.json  0066685f-virtualenv-py3.13.json  0066685f-virtualenv-py3.14-Cython.json  0066685f-virtualenv-py3.14.json  008e0bac-virtualenv-py3.12-Cython.json  008e0bac-virtualenv-py3.12.json  008e0bac-virtualenv-py3.13-Cython.json  008e0bac-virtualenv-py3.13.json  008e0bac-virtualenv-py3.14-Cython.json  008e0bac-virtualenv-py3.14.json  010f7695-virtualenv-py3.12-Cython.json  010f7695-virtualenv-py3.12.json  010f7695-virtualenv-py3.13-Cython.json  010f7695-virtualenv-py3.13.json  010f7695-virtualenv-py3.14-Cython.json  010f7695-virtualenv-py3.14.json  01fde8bf-virtualenv-py3.12-Cython.json  01fde8bf-virtualenv-py3.12.json  01fde8bf-virtualenv-py3.13-Cython.json  01fde8bf-virtualenv-py3.13.json  01fde8bf-virtualenv-py3.14-Cython.json  01fde8bf-virtualenv-py3.14.json  023e572b-virtualenv-py3.12-Cython.json  023e572b-virtualenv-py3.12.json  023e572b-virtualenv-py3.13-Cython.json  023e572b-virtualenv-py3.13.json  (+6181 more)
.asv/results/HH000703/: 02687fdb-virtualenv-py3.14t-Cython.json  02687fdb-virtualenv-py3.14t.json  02687fdb-virtualenv-py3.15-Cython.json  02687fdb-virtualenv-py3.15.json  031622fb-virtualenv-py3.12-Cython.json  031622fb-virtualenv-py3.12.json  031622fb-virtualenv-py3.13-Cython.json  031622fb-virtualenv-py3.13.json  031622fb-virtualenv-py3.14-Cython.json  031622fb-virtualenv-py3.14.json  128e7b8b-virtualenv-py3.12-Cython.json  128e7b8b-virtualenv-py3.12.json  128e7b8b-virtualenv-py3.13-Cython.json  128e7b8b-virtualenv-py3.13.json  128e7b8b-virtualenv-py3.14-Cython.json  128e7b8b-virtualenv-py3.14.json  12b97a8d-virtualenv-py3.12-Cython.json  12b97a8d-virtualenv-py3.12.json  12b97a8d-virtualenv-py3.13-Cython.json  12b97a8d-virtualenv-py3.13.json  12b97a8d-virtualenv-py3.14-Cython.json  12b97a8d-virtualenv-py3.14.json  12b97a8d-virtualenv-py3.14t-Cython.json  12b97a8d-virtualenv-py3.14t.json  12b97a8d-virtualenv-py3.15-Cython.json  12b97a8d-virtualenv-py3.15.json  12b97a8d-virtualenv-py3.15t-Cython.json  12b97a8d-virtualenv-py3.15t.json  1716231d-virtualenv-py3.12-Cython.json  1716231d-virtualenv-py3.12.json  1716231d-virtualenv-py3.13-Cython.json  1716231d-virtualenv-py3.13.json  1716231d-virtualenv-py3.14-Cython.json  1716231d-virtualenv-py3.14.json  1716231d-virtualenv-py3.14t-Cython.json  1716231d-virtualenv-py3.14t.json  1716231d-virtualenv-py3.15-Cython.json  1716231d-virtualenv-py3.15.json  1716231d-virtualenv-py3.15t-Cython.json  1716231d-virtualenv-py3.15t.json  (+513 more)
.github/workflows/: bastitest.yml  codeql-analysis.yml  pylint.yml
.trunk/: trunk.yaml
benchmarks/: benchmarks.py
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) Ultra 7 165U/machine-HH000703/num_cpu-8/os-Linux 6.6.87.2-microsoft-standard-WSL2/python-3.12/ram-16483844096/: summary.json
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) Ultra 7 165U/machine-HH000703/num_cpu-8/os-Linux 6.6.87.2-microsoft-standard-WSL2/python-3.13/ram-16483844096/: summary.json
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) Ultra 7 165U/machine-HH000703/num_cpu-8/os-Linux 6.6.87.2-microsoft-standard-WSL2/python-3.14/ram-16483844096/: summary.json
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) Ultra 7 165U/machine-HH000703/num_cpu-8/os-Linux 6.6.87.2-microsoft-standard-WSL2/python-3.14t/ram-16483844096/: summary.json
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) Ultra 7 165U/machine-HH000703/num_cpu-8/os-Linux 6.6.87.2-microsoft-standard-WSL2/python-3.15/ram-16483844096/: summary.json
graphs/Cython-null/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) i7-3520M CPU @ 2.90GHz/machine-BWN12101/num_cpu-4/os-Linux 6.19.12-1-liquorix-amd64/python-3.12/ram-3867232/: summary.json
graphs/summary/: benchmarks.TimeCreation.time_create_from_tuple.json  benchmarks.TimeCreation.time_create_single.json  benchmarks.TimeScalarInterval.time_abs.json  benchmarks.TimeScalarInterval.time_add.json  benchmarks.TimeScalarInterval.time_bool.json  benchmarks.TimeScalarInterval.time_inplace_add.json  benchmarks.TimeScalarInterval.time_inplace_mul.json  benchmarks.TimeScalarInterval.time_mid_rad.json  benchmarks.TimeScalarInterval.time_mul_mixed.json  benchmarks.TimeScalarInterval.time_mul_negative.json  benchmarks.TimeScalarInterval.time_mul_positive.json  benchmarks.TimeScalarInterval.time_neg.json  benchmarks.TimeScalarInterval.time_sub.json  benchmarks.TimeScalarInterval.time_truediv.json  benchmarks.TimeScalarIntervalLarge.time_add_large.json  benchmarks.TimeScalarIntervalLarge.time_mul_large.json
pyintlab/: __init__.py  scalar_interval.py  test_scalar_interval.py
src/: testkreditrechnung.py
src/pyintlab/: .gitignore  __init__.py  array_interval.py  interval_tensor.py  numpy_scalar_interval.py  numpydt_scalar_interval.py  scalar_interval.py  test_ndarray_interval_matrix.py  test_scalar_interval.py
src/tests/: __init__.py  test_array_interval.py  test_array_interval_vs_scalar.py  test_ndarray_interval_matrix.py  test_numpy_scalar_interval.py  test_scalar_interval.py  test_scalar_interval_mpmath.py
src/tests/benchmarks/: test_ScalarInterval.py
(+13 files in other folders)
