# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
# https://python-poetry.org/docs/pyproject/
[tool.autopep8]
in-place = true
jobs = 0
max_line_length = 88
recursive = true

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
#line-length = 88
color = true
safe = true
target-version = ['py311'] #'py37', 'py38',

[tool.darker]
check = true
diff = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"
revision = "main"

[tool.flake8]
max-line-length = 88

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
install_types = true
non_interactive = true
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true
show_error_context = true
strict = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
color_output = true
profile = "black"
py_version = 310

[tool.pylama.pep8]
max_line_length = 88

[tool.pylint.MASTER]
include-naming-hint = "y"
jobs = 0
output-format = "colorized"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "strict"
tool.pyright.executionEnvironments = [
  "root = src/pyintlab",
  "pythonVersion = 3.11",
  "pythonPlatform = Linux",
]

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = ["--verbose"]

[tool.towncrier]

[tool.poetry]
name = "pyintlab"
version = "0.1.1-alpha.0"
description = "package in memoriam of intlab=Matlab Interval Laboratory"
authors = ["Ebeling, Dr. Bastian <bastian.ebeling@web.de>"]

[tool.poetry.dependencies]
python = "~3.11"
radon = "^5.0.1"
numpy = ">=1.22.0"
flake8-pydocstyle = "^0.2.2"
[tool.poetry.dependencies.prospector]
extras = ["all"]
version = "^1.9.0"
[tool.poetry.dependencies.pylama]
extras = ["all"]
version = "^8.4.1"
[tool.poetry.group.dev.dependencies]
autopep8 = ">=1.6.0"
bandit = "^1.7.4"
bellybutton = "^0.3.1"
callgraph = "^1.0.0"
coverage = "*"
deepsource = "^0.1.2"
dlint = "^0.14.0"
eradicate = "*"
flake8 = ">=5"
git-story = ">=0.1.4"
interrogate = ">=1.5.0"
isort = "*"
mccabe = "*"
modernize = "^0.8.0"
MonkeyType = ">=22.2.0"
mypy = "^1.0.1"
pep257 = "*"
pep8 = "*"
prospector = ">=1.8"
pyanalyze = ">=0.7.0"
pyannotate = ">=1.2.0"
pycodestyle = "*"
pydocstyle = "*"
pyflakes = "*"
pylama = "*"
pylint = "*"
pyre-check = "*"
pyright = ">=1.1.235"
pyroma = "^4.2"
pytest = ">=6"
setuptools = ">=62.1.0"
tox = "^4.4.11"
types-colorama = "^0.4.15.4"
types-pygments = "^2.14.0.0"
types-setuptools = "*"
types-toml = "*"
ufmt = ">=2.0.1"
vermin = "*"
vulture = "*"

[tool.poetry.group.dev.dependencies.pytype]
version = ">=2022"
python = ">=3.7,<=3.10"

#[tool.poetry.group.dev.dependencies.mypy]
#git = "https://github.com/python/mypy.git"
[tool.poetry.group.dev.dependencies.black]
version = ">22"
allow-prereleases = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>4
        virtualenv>20.2
    env_list =
#        py310
        py311
#        type
#        py39
#        py312
    minversion = 4.4.11

    [testenv]
    description = run the tests with pytest
    package = wheel
    wheel_build_env = .pkg
    parallel_show_output = true 
    platform =
        linux
    deps =
        pytest>=6
    commands =
        pytest {tty:--color=yes} {posargs}
"""
