# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
# https://python-poetry.org/docs/pyproject/
[tool.autopep8]
in-place = true
jobs = 0
max_line_length = 88
recursive = true

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
#line-length = 88
color = true
#save = true
target-version = ['py311'] #'py37', 'py38',

[tool.darker]
check = true
diff = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"
revision = "main"

[tool.flake8]
max-line-length = 88

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
install_types = true
non_interactive = true
# plugins = "numpy.typing.mypy_plugin" # deprecated from 2.3
show_error_codes = true
show_error_context = true
strict = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
color_output = true
profile = "black"
py_version = 311

[tool.pylama.pep8]
max_line_length = 88

[tool.pylint.MASTER]
include-naming-hint = "y"
jobs = 0
output-format = "colorized"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "strict"
tool.pyright.executionEnvironments = [
  "root = src/pyintlab",
  "pythonVersion = 3.11",
  "pythonPlatform = Linux",
]

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = ["--verbose"]

[tool.towncrier]

[project]
name = "pyintlab"
version = "0.1.6"
description = "package in memoriam of intlab=Matlab Interval Laboratory"
authors = [{ name = "Ebeling, Dr. Bastian", email = "bastian.ebeling@web.de" }]
requires-python = ">=3.11,<4.0"
dependencies = ["numpy>2.2", "cython (>=3.1.2,<4.0.0)"]

[tool.poetry.group.dev.dependencies]
autopep8 = ">=1.6.0"
bandit = "^1.7.4"
bellybutton = "^0.3.1"
callgraph = "^1.0.0"
coverage = "*"
deepsource = "^0.1.2"
dlint = "^0.14.0"
eradicate = "*"
flake8 = ">=5"
flake8-pydocstyle = "^0.2.2"
# git-story = ">=0.1.4" # issue with python3.13
interrogate = ">=1.5.0"
isort = ">=6"
mccabe = "*"
modernize = "^0.8.0"
MonkeyType = ">=22.2.0"
mypy = ">=1.15"
pep257 = "*"
pep8 = "*"
pyanalyze = ">=0.7.0"
pyannotate = ">=1.2.0"
pycodestyle = "*"
pydocstyle = "*"
pyflakes = "*"
pylint = "*"
pyre-check = "*"
pyright = ">=1.1.235"
pyroma = "^4.2"
pytest = ">=6"
radon = "^5.0.1"
setuptools = ">=62.1.0"
sourcery = "^1.35.0"
tox = "^4.4.11"
types-colorama = "^0.4.15.4"
types-pygments = "^2.14.0.0"
types-setuptools = "*"
types-toml = "*"
ufmt = ">=2.0.1"
vermin = "*"
vulture = "*"
ruff = "^0.3.7"
#pylyzer = "^0.0.51"
pyrefly = "^0.21.0"
basedpyright = "^1.30.1"

[tool.poetry.group.dev.dependencies.prospector]
extras = ["all"]
version = "^1.9.0"

[tool.poetry.group.dev.dependencies.pylama]
extras = ["all"]
version = "^8.4.1"

[tool.poetry.group.dev.dependencies.pytype]
version = ">=2022"
#python = ">=3.7,<=3.10"

[tool.poetry.group.dev.dependencies.black]
version = ">=25"
#allow-prereleases = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
requires = ["tox>4", "virtualenv>20.2"]
env_list = ["py311", "py312", "py313", "bastipytest"]
minversion = "4.22.0"

[tool.tox.env.bastipytest]
description = "run the tests with pytest"
package = "wheel"
wheel_build_env = ".pkg"
parallel_show_output = true
platform = "linux"
deps = ["pytest>=6", "pytest-sugar"]
commands = [["pytest", "{tty:--color=yes}", "{posargs}"]]

[tool.pyrefly]
