[project]
name = "pyintlab"
version = "0.1.19"
description = "package in memoriam of intlab=Matlab Interval Laboratory"
authors = [{ name = "Ebeling, Dr. Bastian", email = "bastian.ebeling@web.de" }]
requires-python = ">=3.12,<4.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=2.4",
  "valuefragments @ git+https://github.com/Barry1/PyValueFragments",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

# Learn more at <https://github.com/carlosperate/awesome-pyproject>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
# https://python-poetry.org/docs/pyproject/
[tool.autopep8]
in-place = true
jobs = 0
max_line_length = 88
recursive = true

[dependency-groups]
dev = [
  "autopep8>=1.6.0",
  "bandit>=1.7.4,<2",
  "basedpyright>=1.30.1,<2",
  "beartype>=0.21.0,<0.22",
  "bellybutton>=0.3.1,<0.4",
  "callgraph>=1.0.0,<2",
  "coverage",
  "deepsource>=0.1.2,<0.2",
  "dlint>=0.14.0,<0.15",
  "eradicate",
  "flake8>=5",
  "flake8-pydocstyle>=0.2.2,<0.3",
  "hatch>=1.14.2",
  "interrogate>=1.5.0",
  "isort>=6",
  "mccabe",
  "modernize>=0.8.0,<0.9",
  "MonkeyType>=22.2.0",
  "mypy>=1.15",
  "nox>=2025.5.1",
  "pep257",
  "pep8",
  "pipdeptree>=2.35",
  "pyanalyze>=0.7.0",
  "pyannotate>=1.2.0",
  "pycodestyle",
  "pydocstyle",
  "pyflakes",
  "pylint",
  "pyre-check",
  "pyrefly>=0.21.0",
  "pyright>=1.1.235",
  "pyroma>=4.2,<5",
  "pytest>=6",
  "pytest-bandit>=0.6.1,<0.7",
  "pytest-beartype>=0.2.0,<0.3",
  "pytest-black>=0.6.0,<0.7",
  "pytest-colordots>=1.1,<2",
  "pytest-cov>=6.2.1,<7",
  "pytest-monkeytype>=1.1.0,<2",
  "pytest-mypy>=1.0.1,<2",
  "pytest-pyright>=0.0.6,<0.0.7",
  "pytest-sugar>=1.0.0,<2",
  "pyupgrade>=3.21.2",
  "radon>=5.0.1,<6",
  "ruff>=0.3.7,<0.4",
  "setuptools>=62.1.0",
  "sourcery>=1.43",
  "tox>=4.4.11,<5",
  "ty>=0.0.11",
  "typeguard>=4.4.4,<5",
  "types-colorama>=0.4.15",
  "types-pygments>=2.20",
  "types-setuptools>=82",
  "types-toml>=0.10",
  "ufmt>=2.8",
  "vermin>=1.8",
  "vulture>=2.15",
  "prospector[all]>=1.9.0,<2",
  "black>=25",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 79
color = true
[tool.ruff]
line-length = 79

[tool.uv]
default-groups = "all"
#save = true
#target-version = ['py311'] #'py37', 'py38',

[tool.darker]
check = true
diff = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"
revision = "main"

[tool.flake8]
max-line-length = 88

# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.mypy]
# install_types = true # crashing pytest-mypy
# non_interactive = true # crashing pytest-mypy
# plugins = "numpy.typing.mypy_plugin" # deprecated from 2.3
show_error_codes = true
show_error_context = true
strict = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
color_output = true
profile = "black"
#py_version = 311

[tool.pylint.MASTER]
include-naming-hint = "y"
jobs = 0
output-format = "colorized"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "strict"
executionEnvironments = [
  { root = "src/pyintlab", pythonVersion = "3.12", pythonPlatform = "Linux" },
  { root = "src/pyintlab", pythonVersion = "3.13", pythonPlatform = "Linux" },
  { root = "src/pyintlab", pythonVersion = "3.14", pythonPlatform = "Linux" },
]

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = [
  "--verbose",
  "--cov=src/pyintlab",
  "--cov-report=term-missing",
  "--typeguard-packages=pyintlab",
  "--color=yes",
]
required_plugins = ["pytest-cov", "typeguard", "pytest-sugar"]

[tool.towncrier]

[tool.tox]
#https://tox.wiki/en/stable/config.html#pyproject-toml-native
requires = ["tox>4", "virtualenv>20.2"]
env_list = [
  { product = [
    { prefix = "3.", start = 12, stop = 15 },
    [
      "",
      "dev",
    ],
  ] },
  "bastipytest",
]
minversion = "4.22.0"
description = "Run test under {envname}"


[tool.tox.env_run_base]
description = "Run test under {base_python}"
package = "wheel"
wheel_build_env = ".pkg"
parallel_show_output = true
allowlist_externals = ["coverage"]
deps = ["pytest>=8", "pytest-sugar>=1", "pytest-cov>=6", "typeguard>=4"]
commands = [
  [
    "pytest",
    "--verbose",
    "--cov=src/pyintlab",
    "--cov-report=term-missing",
    "--typeguard-packages=pyintlab",
    "--color=yes",
    "{posargs}",
  ],
  [
    "coverage",
    "report",
    "--fail-under=90",
  ],
]
passenv = ["PYTHONPATH"]

[tool.tox.env.bastipytest]
description = "run the tests with pytest"
package = "wheel"
wheel_build_env = ".pkg"
parallel_show_output = true
platform = "linux"
deps = ["pytest>=6", "pytest-sugar"]
commands = [["pytest", "{tty:--color=yes}", "{posargs}"]]

[tool.tox.env.typecheck]
description = "run the type checks with pyright"
deps = ["pyright>=1.1.235"]
commands = [["pyright", "src/pyintlab"]]

[tool.pyrefly]
