# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>

# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
#https://setuptools.readthedocs.io/en/latest/references/keywords.html
name = pyintlab
version = 0.0.1
url = https://github.com/Barry1/PyIntLab#egg=pyintlab
description = Testing installation of Package
author = Ebeling. Dr. Bastian
author_email = bastian.ebeling@web.de
license = tbd later
zip_safe = False
provides = pyintlab
keywords = scalar interval

[options]
packages = find:

[options.packages.find]
where=pyintlab

[options.extras_require]
#ALLFEATURES =
#    psutil
#    hashlib
#    icecream
#    cpu_load_generator
#    resource;platform_system=='Linux'
