# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>

# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
#https://setuptools.readthedocs.io/en/latest/references/keywords.html
name = pyintlab
version = 0.0.1
url = https://github.com/Barry1/PyIntLab
description = Testing installation of Package
author = Ebeling. Dr. Bastian
author_email = bastian.ebeling@web.de
license = tbd later
zip_safe = False
provides = pyintlab
keywords = scalar interval

[options]
packages = find:
install_requires = pytest
#package_dir = {'': 'src'}
package_dir=
    =src
[options.packages.find]
where = src

[options.extras_require]
#ALLFEATURES =
#    psutil
#    hashlib
#    icecream
#    cpu_load_generator
#    resource;platform_system=='Linux'
[pylama]
format = pylint
#skip = */.tox/*,*/.env/*
#linters = pylint,mccabe,pycodestyle,pydocstyle,pyflakes,radon,gjslint,eradicate
linters = mccabe,pep257,pydocstyle,pep8,pycodestyle,pyflakes,radon,pylint,mypy,isort
ignore=D203,D213
[pylama:isort]
profile = black
[pylama:mypy]
strict = true

[pylama:pydocstyle]
#builtins = _
[pylama:pyflakes]
#builtins = _

[pylama:pycodestyle]
max_line_length = 88

[pylama:pylint]
max_line_length = 88
jobs = 0
output-format = colorized
include-naming-hint = y
#disable = R
[pylama:pep8]
max_line_length=88